<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">G+J e|MS SDK Test App</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>
    <string name="settingsText1">Ad Unit ID</string>
    <string name="settingsText3">Keywords</string>
    <string name="settingsText2">Index Page?</string>
    <string name="settingsButton">Save</string>
    <string name="TabVideo">Video</string>
    <string name="TabInter">Interstitials</string>
    <string name="TabBanner">Banner</string>
    <string name="TabNative">Native</string>
    <string name="TabMData">MData</string>
    <string name="TabInFlow">InFlow</string>
    <string name="BannerFragmentTitle1">TOP (1)</string>
    <string name="BannerFragmentTitle2">MID1 (2)</string>
    <string name="BannerFragmentTitle3">MID3 (3)</string>
    <string name="BannerFragmentTitle4">Bottom (10)</string>
    <string name="mdataage">Alter</string>
    <string name="mdatagender">Geschlecht</string>
    <string name="mdatayear">Geburtsjahr</string>
    <string name="mdataRefreshButton">Refresh</string>
    <string name="mdataNoResponse">Warten auf Rückmeldung</string>
    <string name="mdataNoValue">Keine Rückgabe</string>
    <string name="mdataMale">männlich</string>
    <string name="mdataFemale">weiblich</string>
    <string name="FragmentInterstitialbutton">Show Interstitial</string>
    <string name="SettingsBanner1Sizes">Banner Top(1) Disabled Banner Sizes</string>
    <string name="SettingsCheckBoxRectangle">Rectangle</string>
    <string name="SettingsCheckboxBillboard">Billboard</string>
    <string name="SettingsCheckboxDesktopBillboard">Desktop Billboard</string>
    <string name="SettingsCheckboxLeaderBoard">Leaderboard</string>
    <string name="SettingsCheckboxTwoOnOne">TwoOnOne</string>
    <string name="SettingsCheckboxThreeOnOne">ThreeOnOne</string>
    <string name="SettingsContentUrl">ContentURL</string>
    <string name="SettingsBanner2Sizes">Banner Mid1 (2) Disabled Banner Sizes</string>
    <string name="SettingsBanner3Sizes">Banner Mid2 (3) Disabled Banner Sizes</string>
    <string name="SettingsBanner10Sizes">Banner Bottom (10) Disabled Banner Sizes</string>
    <string name="FragmentVideoPlayButton">Request Ad</string>
    <string name="FragmentNativeButton">Load Ad</string>
    <string name="FragmentBannerReload">Refresh</string>
    <string name="inflowText">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
