<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="de.guj.ems.gohl.test.app.SettingsActivity" >

    <TextView
        android:id="@+id/settingsText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:text="@string/settingsText1" />

    <EditText
        android:id="@+id/settingsValueAdUnit"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
>
    </EditText>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settingsText2" />
    <ToggleButton
        android:id="@+id/settingsValueIndex"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/SettingsBanner1Sizes"
            android:id="@+id/textView" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/SettingsCheckBoxRectangle"
            android:id="@+id/settingsRectangle1" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/SettingsCheckboxBillboard"
            android:id="@+id/settingsBillboard1" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/SettingsCheckboxDesktopBillboard"
            android:id="@+id/settingsDesktopBillboard1" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/SettingsCheckboxLeaderBoard"
            android:id="@+id/settingsLeaderboard1" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/SettingsCheckboxTwoOnOne"
            android:id="@+id/settingsTwoOnOne1" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/SettingsCheckboxThreeOnOne"
            android:id="@+id/settingsThreeOnOne1" />

        <TextView
            android:id="@+id/settingsContentUrlDescription1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:text="@string/SettingsContentUrl" />
        <EditText
            android:id="@+id/settingsContentUrl1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            >
        </EditText>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/SettingsBanner2Sizes"
            android:id="@+id/textView2" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/SettingsCheckBoxRectangle"
            android:id="@+id/settingsRectangle2" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/SettingsCheckboxBillboard"
            android:id="@+id/settingsBillboard2" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/SettingsCheckboxDesktopBillboard"
            android:id="@+id/settingsDesktopBillboard2" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/SettingsCheckboxLeaderBoard"
            android:id="@+id/settingsLeaderboard2" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/SettingsCheckboxTwoOnOne"
            android:id="@+id/settingsTwoOnOne2" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/SettingsCheckboxThreeOnOne"
            android:id="@+id/settingsThreeOnOne2" />
        <TextView
            android:id="@+id/settingsContentUrlDescription2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:text="@string/SettingsContentUrl" />
        <EditText
            android:id="@+id/settingsContentUrl2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            >
        </EditText>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/SettingsBanner3Sizes"
            android:id="@+id/textView3" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/SettingsCheckBoxRectangle"
            android:id="@+id/settingsRectangle3" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/SettingsCheckboxBillboard"
            android:id="@+id/settingsBillboard3" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/SettingsCheckboxDesktopBillboard"
            android:id="@+id/settingsDesktopBillboard3" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/SettingsCheckboxLeaderBoard"
            android:id="@+id/settingsLeaderboard3" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/SettingsCheckboxTwoOnOne"
            android:id="@+id/settingsTwoOnOne3" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/SettingsCheckboxThreeOnOne"
            android:id="@+id/settingsThreeOnOne3" />
        <TextView
            android:id="@+id/settingsContentUrlDescription3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:text="@string/SettingsContentUrl" />
        <EditText
            android:id="@+id/settingsContentUrl3"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            >
        </EditText>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/SettingsBanner10Sizes"
            android:id="@+id/textView4" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/SettingsCheckBoxRectangle"
            android:id="@+id/settingsRectangle10" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/SettingsCheckboxBillboard"
            android:id="@+id/settingsBillboard10" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/SettingsCheckboxDesktopBillboard"
            android:id="@+id/settingsDesktopBillboard10" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/SettingsCheckboxLeaderBoard"
            android:id="@+id/settingsLeaderboard10" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/SettingsCheckboxTwoOnOne"
            android:id="@+id/settingsTwoOnOne10" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/SettingsCheckboxThreeOnOne"
            android:id="@+id/settingsThreeOnOne10" />
        <TextView
            android:id="@+id/settingsContentUrlDescription10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:text="@string/SettingsContentUrl" />
        <EditText
            android:id="@+id/settingsContentUrl10"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            >
        </EditText>

        <Button
        android:id="@+id/settingsSubmit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settingsButton"
        android:layout_gravity="center_horizontal|bottom" />





</LinearLayout>
</ScrollView>